--- a/ws-space-apps/ws-space/nbproject/project.properties
+++ b/ws-space-apps/ws-space/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.jasypt-1.9.0.jar=lib/lib/jasypt-1.9.0.jar
 file.reference.java-json.jar=lib/java-json.jar
 file.reference.jersey-bundle-1.19.1.jar=lib/jersey-bundle-1.19.1.jar
 file.reference.JTC.jar=lib/JTC_183/dist/JTC.jar
+file.reference.JTC.jar-1=lib\\JTC.jar
 file.reference.log4j-1.2.17.jar=lib/lib/log4j-1.2.17.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
 file.reference.poi-ooxml-3.17.jar=lib/poi-ooxml-3.17.jar
@@ -73,7 +74,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.gson-2.8.6.jar}:\
     ${file.reference.sqljdbc4-2.0.jar}:\
-    ${file.reference.JTC.jar}
+    ${file.reference.JTC.jar}:\
+    ${file.reference.JTC.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
