--- a/ws-space-apps/ws-space/nbproject/private/private.properties
+++ b/ws-space-apps/ws-space/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\sistemas01\\AppData\\Roaming\\NetBeans\\11.3\\config\\PayaraEE6\\Properties\\pfv3836344087.properties
+file.reference.JTC.jar=C:\\Users\\sistemas01\\Documents\\GitHub\\space_app_2021\\ws-space-apps\\ws-space\\lib\\JTC.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/sistemas01/Payara_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/sistemas01/Payara_Server/glassfish
