--- a/frontend_space_app/package.json
+++ b/frontend_space_app/package.json
@@ -18,6 +18,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.2",
+    "sockjs-client": "^1.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
